// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders as expected 1`] = `
.c0 {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #26A826;
  display: inline-block;
}

.c0 .c1 {
  margin-right: 5px;
  position: relative;
  vertical-align: middle;
}

.c0:hover {
  cursor: pointer;
  color: #006300;
}

.c0:focus {
  color: rgba(0,0,0,0.9);
  cursor: default;
  background-color: #FFDA7F;
  outline: none;
}

<div
  className=""
  data-component="link"
  disabled={false}
>
  <a
    className="c0"
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span>
      <span
        className="carbon-link__content"
      >
        test
      </span>
    </span>
  </a>
</div>
`;

exports[`Link when component has classic theme should render correct style 1`] = `
.c0 {
  font-size: 14px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #00805D;
  display: inline-block;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #255BC7;
}

.c0 .c1 {
  margin-right: 5px;
  position: relative;
  vertical-align: middle;
  top: -2px;
}

.c0:hover {
  cursor: pointer;
  color: #006045;
}

.c0 .c1 {
  color: #255BC7;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #004B87;
}

.c0:hover .c1 {
  color: #004B87;
}

<div
  className=""
  data-component="link"
  disabled={false}
>
  <a
    className="c0"
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span>
      <span
        className="carbon-link__content"
      >
        test
      </span>
    </span>
  </a>
</div>
`;
